--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,12 @@ html(lang='en')
 	head
 		meta(charset="utf-8")
 		title Colorado App
-
+		link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
+		link(rel="stylesheet", href="/styles/main.css")
 	body
 		block content
 		
+		script(src="https://maps.googleapis.com/maps/api/js?v=3.exp")
+		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
+		script(src="/Scripts/main.js")
