--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-	h1 The Colorado App
-	#map-canvas
+	.panel.panel-default
+		.panel-body.text-center
+			h1 The Colorado App
+	#mapcontainer
+		#map-canvas
