--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,4 +11,5 @@ html(lang='en')
 		script(src="https://maps.googleapis.com/maps/api/js?v=3.exp")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
 		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
+		script(src="/Scripts/map.js")
 		script(src="/Scripts/main.js")
