--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,5 +11,6 @@ html(lang='en')
 		script(src="//maps.googleapis.com/maps/api/js?sensor=false")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
 		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
-		script(src="/Scripts/map.js")
-		script(src="/Scripts/main.js")
+		script(src="/scripts/main.js")
+		block scripts
+		
