created more indexes and controllers

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,17 +3,8 @@ extends layout
 
 block content
 	.container-fluid
-		.list-group
-			a.list-group-item.active(href='#')
-				| Cras justo odio
-				|   
-				a.list-group-item.list-group-item-info(href='#') Dapibus ac facilisis in
-				|   
-				a.list-group-item.list-group-item-info(href='#') Morbi leo risus
-				|   
-				a.list-group-item.list-group-item-info(href='#') Porta ac consectetur ac
-				|   
-				a.list-group-item.list-group-item-info(href='#') Vestibulum at eros
+		h1.text-center.text-info The Colorado App
+
 	h2 Adventures
 	form#new-adventure
 		h1 Add an Adventure
@@ -32,19 +23,7 @@ block content
 		.form-group
 			input.adventure-rating.form-control(type="number", value="2", placeholder="adventure rating")
 		.modal-footer
-			input.btn.btn-primary(type="submit", value="Save Changes")
-	#my-adventure
-	ul#adventure-list
-		h1.text-center MY ADVENTURES
-		for adventure in adventures
-			li.adventure(data-id="#{adventure._id}")
-				strong= adventure.name
-				| &nbsp;
-				a.view(href="#") view
-				|  - 
-				a.edit(href="#") edit
-				|  - 
-				a.delete(href="#") delete
+			input.btn.btn-primary(type="submit", value="Save")
 	#view-modal.modal.fade
 		.modal-dialog
 			.modal-content
@@ -60,31 +39,18 @@ block content
 					p.text-center.adventure-imgUrl
 					p.adventure-description
 					p.adventure-rating
-					
-					
-	#edit-modal.modal.fade
-		.modal-dialog
-			.modal-content
-				.modal-header
-					button.close(type="button", data-dismiss="modal")
-						span &times;
-					h4.modal-title Edit a adventure
-				form#edit-form
-					input.adventure-id(type="hidden")
-					.modal-body
-						.form-group
-							input.adventure-name.form-control(type="text", placeholder="adventure name...")
-						.form-group
-							input.adventure-latlng.form-control(type="number", step="any", placeholder="location...")
-						.form-group
-							input.adventure-type.form-control(type="text", placeholder="adventure Type...")
-						.form-group
-							input.adventure-date.form-control(type="date", placeholder="date...")
-						.form-group
-							input.adventure-imgUrl.form-control(type="url", placeholder="image...")
-						.form-group
-							input.adventure-description.form-control(type="text", placeholder="adventure desctiption")
-						.form-group
-							input.adventure-rating.form-control(type="number", placeholder="adventure rating")
-					.modal-footer
-						input.btn.btn-primary(type="submit", value="Save Changes")
+	#adventure-list
+		//- h1.text-center MY ADVENTURES
+		//- for adventure in adventures
+		//- 	li.adventure(data-id="#{adventure._id}")
+		//- 			strong= adventure.name
+		//- 			| &nbsp;
+		//- 		a.btn.btn-primary.view(href="#") view
+		//- 		|  - 
+		//- 		a.btn.btn-primary.edit(href="#") edit
+		//- 		|  - 
+		//- 		a.btn.btn-primary.delete(href="#") delete
+
+block scripts
+	script(src="/scripts/welcome.js")
+
