--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,11 @@ html(lang='en')
 		meta(charset="utf-8")
 		title Colorado App
 		link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
+		// Material Design Links
+		link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.2/css/material-wfont.min.css")
+		link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.2/css/material.min.css")
+		link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.2/css/ripples.min.css")
+
 		link(rel="stylesheet", href="/styles/main.css")
 	body
 		block content
@@ -11,6 +16,11 @@ html(lang='en')
 		script(src="//maps.googleapis.com/maps/api/js?sensor=false")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
 		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
+		// Material Design Links
+		script(src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.2/js/ripples.min.js")
+		script(src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.2/js/material.min.js")
+
+
 		script(src="/scripts/main.js")
 		block scripts
 		
