--- a/views/map.jade
+++ b/views/map.jade
@@ -4,7 +4,7 @@ extends layout
 block content
 	.panel.panel-default
 		.panel-body.text-center
-			h1 The Colorado App
+			h1.text-info The Colorado App
 	#mapcontainer
 		#map-canvas
 	nav.navbar.navbar-inverse
