added material-design and controller

--- a/views/index.jade
+++ b/views/index.jade
@@ -40,7 +40,7 @@ block content
 					p.adventure-description
 					p.adventure-rating
 	#adventure-list
-		//- h1.text-center MY ADVENTURES
+		h1.text-center SOME ADVENTURES NEAR YOU
 		//- for adventure in adventures
 		//- 	li.adventure(data-id="#{adventure._id}")
 		//- 			strong= adventure.name
