--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -11,8 +11,20 @@
 	width: 75%
 }
 
-#adventure-list img, #view-modal img{
+#view-modal img{
 	width: 80%;
 	padding: 10px
 }
 
+#adventure-list img{
+	width: 20%;
+	padding: 10px
+}
+
+.footer {  
+	position: fixed;
+	bottom: 0;
+  	width: 100%;
+  	height: 60px;
+  	background-color: #f5f5f5
+}
