added some links and map route

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
 		.panel-body.text-center
 			h1.text-info The Colorado App
 	#adventure-list
-		h1.text-center FIND YOUR ADVENTURE
+		h1.text-center FIND ADVENTURES NEAR YOU
 	ul
 		li: a(href="/view/trails") Trails
 		li: a(href="/view/snow") Snow
