--- a/views/mapAdventures.jade
+++ b/views/mapAdventures.jade
@@ -11,4 +11,4 @@ block content
 	footer.footer Sticky Footer
 
 block scripts
-	script(src="/scripts/map.js")
+	script(src="/scripts/mapAdventures.js")
