--- a/views/mapAdventures.jade
+++ b/views/mapAdventures.jade
@@ -11,4 +11,5 @@ block content
 	footer.footer Sticky Footer
 
 block scripts
-	script(src="/scripts/mapAdventures.js")
+	script(src="/scripts/gmaps.js")
+	script(src="/scripts/gmapper.js")
