--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -28,3 +28,11 @@
   	height: 60px;
   	background-color: #f5f5f5
 }
+
+#map-gcanvas {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+	width: 500px;
+	height: 500px;
+}
