--- a/views/view.jade
+++ b/views/view.jade
@@ -8,12 +8,11 @@ block content
 	#my-adventure
 		#adventure-list.list-group.text-center
 			for adventure in adventures
-				li.adventure(data-id="#{adventure._id}")
+				li.adventure(data-id= adventure._id, data-coords= adventure.coords.lat +','+ adventure.coords.lng, data-name= adventure.name)
 				img(src=adventure.imageUrl)
 				strong.h1= adventure.name
 				| &nbsp;
 				a.btn.btn-primary.view(href="/view/#{adventure.type}/#{adventure._id}") view
-				a.btn.btn-primary.viewLocation(href="/map") view location
 
 	#view-modal.modal.fade
 		.modal-dialog
@@ -29,6 +28,9 @@ block content
 					p.text-center.adventure-imgUrl
 					p.adventure-description
 					p.adventure-rating
+	.container.h1.text-center Locations
+		#map-gcanvas
+			p hello
 	//- #viewMap-modal.modal.fade
 	//- 	.modal-dialog
 	//- 		.modal-content
@@ -43,7 +45,7 @@ block content
 	footer.footer Sticky Footer
 
 block scripts
-	script(src="/scripts/welcome.js")
-	//- script(src="/scripts/map.js")
+	script(src="/scripts/gmaps.js")
+	script(src="/scripts/gmapper.js")
 
 
