--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8,7 +8,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	height: 80%;
-	width: 75%
+	width: 75%;
 }
 
 #view-modal img{
@@ -25,9 +25,19 @@
 	position: fixed;
 	bottom: 0;
   	width: 100%;
-  	height: 60px;
-  	background-color: #f5f5f5
+  	height: 80px;
+  	background-color: #FFE85C;
+  	opacity: .6
 }
+
+.icon-preview {
+	width: 100%;
+	height: 80px
+}
+
+/*#6D5CFF
+#8375FF
+#3C2FB2*/
 
 #map-gcanvas {
 	float: none;
