marker's firing modals

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,12 @@ block content
 		.panel-body.text-center.blue-2
 			h1.text-info.mdi-image-filter-hdr   The Colorado App
 	h3
+	#load-modal.modal.fade
+		.modal-dialog
+			.modal-content
+				.modal-header
+					button.close(type="button", data-dismiss="modal")
+					h1.modal-title.text-center.text-info.mdi-image-filter-hdr   The Colorado App
 	#adventure-list
 		h1.text-center FIND ADVENTURES NEAR YOU
 	.btn-group.btn-group-justified(role='group', aria-label='...')
