--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -32,6 +32,10 @@
 	padding: 10px;
 }
 
+#my-adventure {
+	margin-bottom: 110px;
+}
+
 #adventure-list img{
 	width: 20%;
 	padding: 10px;
@@ -44,6 +48,7 @@
 
 .footer {  
 	position: fixed;
+	margin: 0;
 	bottom: 0;
   	width: 100%;
   	height: 80px;
