--- a/views/mapAdventures.jade
+++ b/views/mapAdventures.jade
@@ -39,7 +39,7 @@ block content
 		//- a(href="/mapAdventures").btn.icon.mdi-image-filter-hdr
 		a(title= "HOME", href="/").btn.icon.mdi-image-filter-hdr
 block scripts
-	script(src="/scripts/main.js")
+	//- script(src="/scripts/main.js")
 	script(src="/scripts/welcome.js")
 	script(src="/scripts/gmaps.js")
 	script(src="/scripts/gmapper.js")
