--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -27,6 +27,12 @@
 	height: 100%;
 }
 
+#map-gcanvas > div > div:nth-child(1) > div:nth-child(2) {
+	border-style: solid;
+    border-width: 1px;
+	border-color: yellow;
+}
+
 #view-modal img{
 	width: 80%;
 	padding: 10px;
