--- a/views/index.jade
+++ b/views/index.jade
@@ -46,4 +46,4 @@ block content
 block scripts
 	script(src="/scripts/welcome.js")
 	script(src="/scripts/main.js")
-
+	script(src="/scripts/load.js")
