got stuff to stay above the footer

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,32 +5,36 @@ block content
 	.panel.panel-default
 		.panel-body.text-center.blue-2
 			h1.text-info.mdi-image-filter-hdr   The Colorado App
-	h3
-	#load-modal.modal.fade
-		.modal-dialog
-			.modal-content
-				.modal-header
-					button.close(type="button", data-dismiss="modal")
-					h1.modal-title.text-center.text-info.mdi-image-filter-hdr   The Colorado App
+	//- #load-modal.modal.show.fade.col-md-6
+	//- 	.modal-dialog
+	//- 		.modal-content
+	//- 			.modal-header
+	//- 				button.close(type="button", data-dismiss="modal")
+	//- 				h1.modal-title.text-center.text-info.mdi-image-filter-hdr   The Colorado App
+	//- 			.jumbotron
+	//- 				.container
+	//- 					h1 Hello, world!
+	//- 					img(src='http://www.waynewilliamsstudio.com/wp-content/uploads/2010/12/SNEFFELS-Light-on-Peak.jpg')
+	//- 					p
 	#adventure-list
 		h1.text-center FIND ADVENTURES NEAR YOU
-	.btn-group.btn-group-justified(role='group', aria-label='...')
-		a.btn.btn-info(href="/view/trails") Trails
-	.btn-group.btn-group-justified(role='group', aria-label='...')
-		a.btn.btn-info(href="/view/snow") Snow
-	.btn-group.btn-group-justified(role='group', aria-label='...')
-		a.btn.btn-info(href="/view/biking") Biking
-	.btn-group.btn-group-justified(role='group', aria-label='...')
-		a.btn.btn-info(href="/view/geoCache") GeoCaching
-	.btn-group.btn-group-justified(role='group', aria-label='...')
-		a.btn.btn-info(href="/view/adrenaline") Adrenaline
-	.btn-group.btn-group-justified(role='group', aria-label='...')
-		a.btn.btn-info(href="/view/cityLife") City Life
-	.btn-group.btn-group-justified(role='group', aria-label='...')
-		a.btn.btn-info(href="/view/brewery") Brewery
-	.btn-group.btn-group-justified(role='group', aria-label='...')
-		a.btn.btn-info(href="/view/generalShenanigans") General Shenanigans
-
+		.btn-group.btn-group-justified(role='group', aria-label='...')
+			a.btn.btn-info(href="/view/trails") Trails
+		.btn-group.btn-group-justified(role='group', aria-label='...')
+			a.btn.btn-info(href="/view/snow") Snow
+		.btn-group.btn-group-justified(role='group', aria-label='...')
+			a.btn.btn-info(href="/view/biking") Biking
+		.btn-group.btn-group-justified(role='group', aria-label='...')
+			a.btn.btn-info(href="/view/geoCache") GeoCaching
+		.btn-group.btn-group-justified(role='group', aria-label='...')
+			a.btn.btn-info(href="/view/adrenaline") Adrenaline
+		.btn-group.btn-group-justified(role='group', aria-label='...')
+			a.btn.btn-info(href="/view/cityLife") City Life
+		.btn-group.btn-group-justified(role='group', aria-label='...')
+			a.btn.btn-info(href="/view/brewery") Brewery
+		.btn-group.btn-group-justified(role='group', aria-label='...')
+			a.btn.btn-info(href="/view/generalShenanigans") General Shenanigans
+	#my-adventure
 	//- 	h1.text-center FIND BY LOCATION
 	//- ul
 	//- 	li: a(href="/map") SEARCH ON MAP
