--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,7 @@
+body {
+	padding-bottom: 100px;
+}
+
 #map-canvas, html, body { 
 	height: 100%;
 	
@@ -38,13 +42,18 @@
 	padding: 10px;
 }
 
-#my-adventure {
+/*#my-adventure {
 	margin-bottom: 110px;
-}
+}*/
 
 #adventure-list img{
 	width: 20%;
 	padding: 10px;
+	
+}
+
+#adventure-list {
+	margin-bottom: 110px;
 }
 
 
@@ -68,7 +77,7 @@
 	margin-right: auto
 }
 .icon {
-    font-size: 6em;
+    font-size: 5em;
 /*    padding-left: 7px;
     padding-right: 7px;*/
 }
